--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
            
           
                       <div class="sidebar">
-                            <h1 style=""> Editors Pick<hr style="width:30%"></h1>
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <h1 > Editors Pick<hr style="width:30%"></h1>
+                            <img src="image/article1.jpg" alt="">
+                            <img src="image/article2.jpg" alt="">
+                            <img src="image/article3.jpg" alt="">
                         </div>
 
         </div>
